# agent

./: .gitignore  README.md  download_model.py  fine_tuning.ipynb  intent_agent.py  pyproject.toml  react_agent.py  react_agent_gemma.py  react_agent_gemma_langchain.py
backend/app/: app.py
front/app/: pubspec.yaml
front/app/lib/: ai_service.dart  chat.dart  home_screen.dart  main.dart  message_bubble.dart
frontend/: state.py
frontend/app/: app.py
frontend/app/components/: chat.py  modal.py  navbar.py  run_llm.py
llm_model/: lora_train.py  run_llm.py
lora_finetune/: README.md  train_lora_transformers.py
mlx_pretrain_example/: README.md  config.yaml  create_scratch_model.py  requirements.txt
mlx_pretrain_example/data/: train.jsonl  valid.jsonl
mlx_pretrain_example/models/fused_model/: config.json  model.safetensors.index.json  tokenizer.json  tokenizer_config.json
mlx_pretrain_example/models/pretrained_model/: adapter_config.json  config.json  tokenizer_config.json
mlx_pretrain_example/scratch_model/: tokenizer.json
models/: lora_config.yaml  make_dataset.ipynb  make_dataset.py  save_model.py  train_model.py
models/config/: config.yaml
train_example/: Makefile  Modelfile_gemma_2B_kor_local  Modelfile_llama3.2_kor_local  Modelfile_llama3_8b_kor_local  base.py  cache.py  chat.py  config.py  download_korquad.py  download_model.py  evaluate_klue_sts.py  gemini_nano.py  gemma3.py  gemma3_example.py  inspect_model.py  model.ipynb  prepare_dataset.py  quantize.py  qwen3_moe.py  train.py  train_nli.py  train_qwen3_moe.py
