[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.5",
    "datasets>=3.5.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "mcp[cli]>=1.9.2",
    "mlx-lm>=0.24.0",
    "numpy>=2.2.5",
    "ollama>=0.4.8",
    "openai>=1.78.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scipy>=1.16.0",
    "sentencepiece>=0.2.0",
    "streamlit>=1.46.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[tool.setuptools.packages.find]
where = ["."]
